--- a/microservicecloud-config-eureka-7001.yml
+++ b/microservicecloud-config-eureka-7001.yml
@@ -1,5 +1,14 @@
-﻿server:
+﻿spring:
+  profiles:
+    active:
+      -dev
+---
+server:
   port: 7001
+spring:
+  profiles: 7001-eureka
+  application:
+    name: microservicecloud-config-eureka-7001
 eureka:
   instance:
     hostname: eureka7001.com    # eureka 服务器端的实例名称
@@ -7,7 +16,7 @@ eureka:
     register-with-eureka: false  # false 标识不向注册公司注册自己
     fetch-registry: false  # false 标识自己及时注册中心，我的职责就是维护服务实例。并不需要检索服务
     service-url:
-#        defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/  # 设置与eureka server交互的地址查询服务和注册服务
-        defaultZone: http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
+      #        defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/  # 设置与eureka server交互的地址查询服务和注册服务
+      defaultZone: http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
 #  server:
 #     enable-self-preservation: false #禁用自我保护 不推荐使用
